[workspace.package]
description = "A brightness utility that allows you to calibrate brightness between monitors"
repository = "https://github.com/bim9262/calibright"
readme = "README.md"
license = "GPL-3.0-only"
authors = ["Bryan Malyn <bim9262@gmail.com>"]
edition = "2021"
version = "0.1.10"

[workspace]
members = ["lib", "bin"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", default-features = false, features = ["sync"] }
log = { version = "0.4" }

[patch.crates-io]
calibright = { path = "lib/" }
calibright_cli = { path = "bin/" }
