[package]
name = "calibright"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
version = "0.1.6"

[features]
watch = ["notify"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dirs = "5.0"
log = { workspace = true }
notify = { version = "6.1", optional = true, default-features = false }
regex = "1.5"
smart-default = "0.7"
thiserror = "1.0"
tokio = { workspace = true }
toml = "0.8"

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "rc"]

[dependencies.zbus]
version = "4.0"
default-features = false
features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
