[package]
name = "calibright"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
watch = ["notify"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dirs = "6.0"
log = { workspace = true }
notify = { version = "8.0", optional = true, default-features = false }
regex = "1.11"
smart-default = "0.7"
thiserror = "2.0"
tokio = { workspace = true }
toml = "0.8"

[dependencies.futures-util]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "rc"]

[dependencies.zbus]
version = "5"
default-features = false
features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
